--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -27,6 +27,10 @@
     <%= f.password_field :current_password, autocomplete: "off" %>
   </div>
 
+  <%= form_for @user, :url => users_path, :html => { :multipart => true } do |form| %>
+    <%= form.file_field :avatar %>
+  <% end %>
+
   <div class="actions">
     <%= f.submit "Update" %>
   </div>
