--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,34 @@
 </head>
 <body>
 
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <%= link_to "Home", root_path, class: "navbar-brand" %>
+    </div>
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+     	<li><%= link_to "Index", index_path %></li>
+        <li><%= link_to "Codex", codex_path %></li>
+          <li>
+		      <% if user_signed_in? %>
+		        <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "btn btn-success" %>
+		      <% end %>
+		  </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<div class="container">
 <%= yield %>
+</div>
 
 </body>
 </html>
